--- a/style.css
+++ b/style.css
@@ -12,15 +12,20 @@
 
 body {
   margin: 0;
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
   font-family: "Inter", sans-serif;
   background: linear-gradient(135deg, #eef2ff, #f8fafc);
   color: var(--text);
 }
 
 .app-container {
+  width: 100%;
   max-width: 760px;
-  margin: auto;
-  padding: 30px 20px;
+  display: flex;
+  flex-direction: column;
+  /* padding: 30px 20px; */
 }
 
 .app-header {
@@ -66,10 +71,10 @@ label {
 input,
 select {
   width: 100%;
-  padding: 12px 14px;
+  padding: 12px /*14px*/;
   border-radius: 10px;
-  border: 1px solid #e5e7eb;
-  font-size: 14px;
+  /* border: 1px solid #e5e7eb;
+  font-size: 14px; */
 }
 
 input:focus,
@@ -82,6 +87,10 @@ select:focus {
 .row {
   display: flex;
   gap: 12px;
+  flex-wrap: wrap;
+}
+.row > * {
+  flex: 1 1 140px
 }
 
 .primary-btn {
@@ -148,4 +157,21 @@ select:focus {
   background: #0f172a;
   color: white;
   font-size: 18px;
+}
+
+@media print {
+  body {
+    background: white;
+  }
+  
+  .form-section,
+  .print-btn {
+    display: none !important;
+  }
+  
+  .total-card {
+    background: white;
+    color: balck;
+    border-top: 2px solid #000;
+  }
 }
